fix the delete button